<resources>
    <string name="app_name">Paradise Palms - Hotel Management</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_customer_list">Customer list</string>
    <string name="lbl_note">Note:</string>
    <string name="lbl_week">Week</string>
    <string name="lbl_enter_name">Enter name</string>
    <string name="lbl_enter_room_kind">Enter room kind</string>
    <string name="lbl_enter_area">Enter area</string>
    <string name="lbl_expenses">Expenses</string>
    <string name="lbl_book">BOOK</string>
    <string name="lbl_unpaid">unpaid</string>
    <string name="lbl_price_day">Price/day:</string>
    <string name="lbl2">..........</string>
    <string name="msg_enter_old_passw">Enter old password</string>
    <string name="lbl_airport_shuttle">Airport Shuttle</string>
    <string name="lbl_date_of_birth">Date of birth</string>
    <string name="msg_search_name_cc">Search name/ CCCD</string>
    <string name="lbl_enter_id">Enter ID</string>
    <string name="msg_search_room_nam">Search room name</string>
    <string name="lbl_successfull">Successfull</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_room_kind_list">Room kind list</string>
    <string name="lbl_10_5_2021">10/5/2021</string>
    <string name="lbl_12_5_2021">12/5/2021</string>
    <string name="msg_set_along_a_bus">Set along a bustling road lined with shops and eateries, this unpretentious budget hotel is 1 km from Coimbatore International Airport and 10 km from the city centre.</string>
    <string name="lbl_room">Room</string>
    <string name="lbl_new_password">New password</string>
    <string name="lbl_phone_number">Phone number</string>
    <string name="lbl_single_room">Single room</string>
    <string name="lbl_customers">Guests</string>
    <string name="lbl_president_room">President room</string>
    <string name="lbl_log_out">Log out</string>
    <string name="lbl_check_out_day">Check-out day: </string>
    <string name="lbl_sign_in">Sign In</string>
    <string name="lbl_wifi">Wifi</string>
    <string name="lbl_room_kind2">Room kind:</string>
    <string name="lbl_note2">Enter note</string>
    <string name="lbl_0905980355">0905980355</string>
    <string name="msg_17_04_2023_19">17/04/2023 - 19/4/2023</string>
    <string name="lbl_customer_s_name">Guest name</string>
    <string name="lbl_start_date">Start date</string>
    <string name="lbl_day2">/day</string>
    <string name="lbl_20_m">20 m </string>
    <string name="lbl_error">Error</string>
    <string name="lbl_male">Male</string>
    <string name="msg_information_is">Information is changed successfull</string>
    <string name="lbl_non_available2">Non-available</string>
    <string name="lbl_200_000">200.000</string>
    <string name="lbl_price">Price</string>
    <string name="lbl_sep">Sep</string>
    <string name="lbl_0905234234">0905234234</string>
    <string name="lbl_area_20_m">Area: 20 m</string>
    <string name="lbl_report">Report</string>
    <string name="msg_18_04_2023_19">18/04/2023 - 19/4/2023</string>
    <string name="lbl_month">Month</string>
    <string name="lbl_alaska_usa">Alaska, USA</string>
    <string name="msg_enter_rent_form">Enter rent form ID</string>
    <string name="msg_please_enter_va2">Please enter valid password</string>
    <string name="lbl_cccd2">CCCD: </string>
    <string name="lbl_check_in_day">Check-in day: </string>
    <string name="lbl_23_000_000">23.000.000</string>
    <string name="lbl_dec_22_dec_28">Dec 22\nDec 28</string>
    <string name="lbl_single_room2">Single Room</string>
    <string name="msg_21520913_gm_uit">21520913@gm.uit.edu.vn</string>
    <string name="lbl_old_password">Old password</string>
    <string name="lbl_number_of_bed">Number of bed</string>
    <string name="msg_200_000_vnd_d">200.000 VND / day</string>
    <string name="lbl_gender">Gender</string>
    <string name="lbl_end_date">End date</string>
    <string name="lbl_enter_cccd">Enter ID Number</string>
    <string name="msg_enter_room_numb">Enter room number</string>
    <string name="lbl_room_kind">Room Kinds</string>
    <string name="lbl_p112">P112</string>
    <string name="lbl_123">123</string>
    <string name="lbl_p111">P111</string>
    <string name="lbl_p110">P110</string>
    <string name="lbl_rent_form_list">Rent form list</string>
    <string name="lbl_income">Income</string>
    <string name="lbl_david">David</string>
    <string name="lbl_enter_price">Enter price</string>
    <string name="lbl_room_list">Room list</string>
    <string name="lbl_2022">2022</string>
    <string name="lbl_2021">2021</string>
    <string name="lbl_2020">2020</string>
    <string name="lbl_10m">10M</string>
    <string name="msg_forgot_your_pas">Forgot your password?</string>
    <string name="lbl_welcome">Welcome 👋</string>
    <string name="lbl_rent_form">Rental Forms</string>
    <string name="lbl_check_in">Check - in</string>
    <string name="lbl_rental_form">Rental form</string>
    <string name="lbl_enter_address">Enter address</string>
    <string name="lbl_bills">Bills</string>
    <string name="lbl_net_profit">Net Profit</string>
    <string name="lbl_14_5_1998">14/5/1998</string>
    <string name="lbl_paid">paid</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_oct">Oct</string>
    <string name="lbl_233">233</string>
    <string name="lbl_2019">2019</string>
    <string name="lbl_50_m">50 m </string>
    <string name="msg_enter_new_passw">Enter new password</string>
    <string name="lbl_kind_of_room">Kind of room</string>
    <string name="lbl_non_available">Non - available</string>
    <string name="msg_enter_phone_num">Enter phone number</string>
    <string name="msg_enter_number_of">Enter number of bed</string>
    <string name="lbl_birthday">Birthday</string>
    <string name="lbl_cccd">ID Number</string>
    <string name="lbl_vip_room">VIP room</string>
    <string name="lbl_0m">0M</string>
    <string name="lbl_check_out">Check - out</string>
    <string name="lbl_enter_room_id">Enter room ID</string>
    <string name="lbl_rent_form_2">Rent form 2</string>
    <string name="lbl_room_number">Room number:</string>
    <string name="lbl_dec_15_dec_21">Dec 15\nDec 21</string>
    <string name="lbl_rent_form_1">Rent form 1</string>
    <string name="msg_public_swiming">Public Swiming Pool</string>
    <string name="msg_1_bed_2_peopl">1 bed | 2 people</string>
    <string name="lbl_parking">Parking</string>
    <string name="lbl_40_m">40 m </string>
    <string name="lbl_buffet">Buffet</string>
    <string name="lbl_1234">#1234</string>
    <string name="lbl_amenities">Amenities</string>
    <string name="lbl_400_0002">400.000</string>
    <string name="lbl_400_000">400.000 </string>
    <string name="lbl_search_day">Search day</string>
    <string name="lbl_28_000_000">28.000.000</string>
    <string name="lbl_total">Total:</string>
    <string name="lbl_xu_n_huy">Xuân Huy</string>
    <string name="lbl_change_password">Change password</string>
    <string name="lbl_justin">Justin</string>
    <string name="lbl_search_date">Search date</string>
    <string name="lbl_area">Area</string>
    <string name="lbl_kind">Kind</string>
    <string name="lbl_id">ID</string>
    <string name="msg_enter_descripti">Enter description</string>
    <string name="lbl_p109">P109</string>
    <string name="lbl_10_08_2003">10/08/2003</string>
    <string name="lbl_p108">P108</string>
    <string name="lbl_p107">P107</string>
    <string name="lbl_p106">P106</string>
    <string name="lbl_name">Name: </string>
    <string name="lbl_p101">P101</string>
    <string name="lbl_70_m">70 m </string>
    <string name="lbl_20m2">20M</string>
    <string name="lbl_quantity">Quantity</string>
    <string name="lbl_p105">P105</string>
    <string name="lbl_p104">P104</string>
    <string name="lbl_privacy_policy">Privacy Policy</string>
    <string name="lbl_p103">P103</string>
    <string name="lbl_nov">Nov</string>
    <string name="lbl_p102">P102</string>
    <string name="lbl">:</string>
    <string name="lbl_dec_1_dec_7">Dec 1\nDec 7</string>
    <string name="lbl_double_room">Double room</string>
    <string name="lbl_done">DONE</string>
    <string name="lbl_choose_date">Choose date</string>
    <string name="lbl_048203008744">048203008744</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_available">Available</string>
    <string name="lbl_room_number2">Room number</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_year">Year</string>
    <string name="lbl_1">1</string>
    <string name="lbl_2">2</string>
    <string name="lbl_4">4</string>
    <string name="msg_information_is2">Information is INVALID</string>
    <string name="lbl_8">8</string>
    <string name="lbl_invoice_day">Invoice day</string>
    <string name="lbl_60_m">60 m </string>
    <string name="lbl_aug">Aug</string>
    <string name="lbl_2345">#2345</string>
    <string name="msg_search_room_kin">Search room kind</string>
    <string name="lbl_dec_8_dec_14">Dec 8\nDec 14</string>
    <string name="msg_please_enter_va">Please enter valid email</string>
    <string name="lbl_30m">30M</string>
    <string name="lbl_bill_list">Bill list</string>
    <string name="lbl_5m">5M</string>
    <string name="lbl_200_000_vnd">200.000 VND</string>
    <string name="lbl_family_room">Family room</string>
    <string name="lbl_20_4_2020">20/4/2020</string>
    <string name="lbl_ok">OK</string>
    <string name="lbl_day">/ day</string>
    <string name="lbl_5_000_000">5.000.000</string>
    <string name="lbl_status">Status</string>
    <string name="lbl_help">Help</string>
    <string name="lbl_enter_full_name">Enter full name</string>
    <string name="lbl_manager">Manager</string>
    <string name="msg_choose_room_kin">Choose room kind</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_capacity">Capacity</string>
    <string name="lbl_enter_capacity">Enter capacity</string>
    <string name="lbl_25m">25M</string>
    <string name="lbl_full_name">Full name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="noti_fail_title">Error</string>
    <string name="noti_fail_msg">Information is INVALID</string>
    <string name="editbutton">EditButton</string>
    <string name="deletebutton">DeleteButton</string>
    <string name="ubutton">UButton</string>
    <string name="lbl_cost">Cost</string>
    <string name="lbl_paid_status">Paid status</string>
    <string name="lbl_guest_kind">Guest kind</string>
    <string name="lbl_rental_day">Rental day</string>
    <string name="lbl_enter_rental_day">Enter rental day</string>
    <string name="lbl_price_per_day">Price per day</string>
    <string name="lbl_enter_price_per_day">Enter price per day</string>
    <string name="lbl_amount">Amount</string>
    <string name="lbl_enter_amount">Enter amount</string>
    <string name="lbl_resolved_status">Resolved Status</string>
    <string name="lbl_surcharge_percentage">Surcharge percentage</string>
    <string name="lbl_enter_surcharge_percentage">Enter surcharge percentage</string>
    <string name="lbl_surcharge_start_ordinal">Surcharge start ordinal</string>
    <string name="lbl_enter_surcharge_start_ordinal">Enter surcharge start ordinal</string>
    <string name="rb_paid">Paid</string>
    <string name="rb_not_paid">Not paid</string>
    <string name="rb_resolved">Resolved</string>
    <string name="rb_not_resolved">Not resolved</string>
    <string name="lbl_guest">Guest</string>
    <string name="com_auth0_scheme">paradisepalms</string>
    <string name="com_auth0_domain">dev-4dwcl4mq2h7sdwvj.au.auth0.com</string>
    <string name="com_auth0_client_id">Zs62ajeF0J182xoKCiJ0wPEAEZ09b8K1</string>
    <string name="lbl_auto_name">Auto name</string>
</resources>