<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/linearColumnonehundredtwentythreeOne"
        android:layout_gravity="top|start"
        style="@style/groupStyleindigo_901cornerRadius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10pxv" android:orientation="vertical">
        <TextView android:id="@+id/txtOneHundredTwentyThreeOne"
            style="@style/txtOutfitsemibold28_1"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_marginEnd="@dimen/_12pxh"
            android:singleLine="true"
            android:ellipsize="end"
            android:text="@string/lbl_123" tools:text="@string/lbl_123"/>
        <LinearLayout android:id="@+id/linearRowlanguageTwo"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_marginEnd="@dimen/_12pxh" android:orientation="horizontal">
            <TextView android:id="@+id/txtLanguageTwo"
                style="@style/txtIntersemibold20_4"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.53"
                android:layout_width="0dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/lbl_name" tools:text="@string/lbl_name"/>
            <TextView android:id="@+id/txtDavidTwo"
                style="@style/txtInterregular20"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_width="0dp"
                android:layout_weight="0.47"
                android:layout_marginStart="@dimen/_180pxh"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@string/lbl_david" tools:text="@string/lbl_david"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearRowlanguageThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12pxh"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_6pxv"
            android:gravity="start" android:orientation="horizontal">
            <TextView android:id="@+id/txtLanguageThree"
                style="@style/txtIntersemibold20_4"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:layout_width="0dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/lbl_cccd2" tools:text="@string/lbl_cccd2"/>
            <TextView android:id="@+id/txt048203008744Two"
                style="@style/txtInterregular20"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_82pxh"
                android:layout_weight="0.7"
                android:layout_width="0dp"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@string/lbl_048203008744" tools:text="@string/lbl_048203008744"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearRowlanguageFour"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_marginEnd="@dimen/_12pxh" android:orientation="horizontal">
            <TextView android:id="@+id/txtLanguageFour"
                style="@style/txtIntersemibold20_4"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.59"
                android:layout_width="0dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/lbl_check_in_day" tools:text="@string/lbl_check_in_day"/>
            <TextView android:id="@+id/txt1052021"
                style="@style/txtInterregular20"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_marginStart="@dimen/_66pxh"
                android:layout_weight="0.41"
                android:layout_marginBottom="@dimen/_1pxv"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@string/lbl_10_5_2021" tools:text="@string/lbl_10_5_2021"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearRowlanguageFive"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_6pxv"
            android:layout_marginEnd="@dimen/_12pxh" android:orientation="horizontal">
            <TextView android:id="@+id/txtLanguageFive"
                style="@style/txtIntersemibold20_4"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.62"
                android:layout_width="0dp"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@string/lbl_check_out_day" tools:text="@string/lbl_check_out_day"/>
            <TextView android:id="@+id/txt1252021"
                style="@style/txtInterregular20"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_width="0dp"
                android:layout_weight="0.38"
                android:layout_marginStart="@dimen/_53pxh"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@string/lbl_12_5_2021" tools:text="@string/lbl_12_5_2021"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearRowroomnumber"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_marginEnd="@dimen/_12pxh" android:orientation="horizontal">
            <TextView android:id="@+id/txtRoomnumber"
                style="@style/txtIntersemibold20_4"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.77"
                android:layout_width="0dp"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@string/lbl_room_number" tools:text="@string/lbl_room_number"/>

            <TextView
                android:id="@+id/item_br_roomName"
                style="@style/txtInterregular20"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_width="0dp"
                android:layout_weight="0.23"
                android:layout_marginStart="@dimen/_111pxh"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@string/lbl_p101"
                tools:text="@string/lbl_p101" />
        </LinearLayout>
        <LinearLayout android:id="@+id/linearRowroomkind"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_6pxv"
            android:layout_marginEnd="@dimen/_12pxh" android:orientation="horizontal">
            <TextView android:id="@+id/txtRoomkind"
                style="@style/txtIntersemibold20_4"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_2pxv"
                android:layout_weight="0.49"
                android:layout_width="0dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/lbl_room_kind2" tools:text="@string/lbl_room_kind2"/>

            <TextView
                android:id="@+id/item_br_roomKind"
                style="@style/txtInterregular20"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_76pxh"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_weight="0.51"
                android:layout_width="0dp"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@string/lbl_single_room"
                tools:text="@string/lbl_single_room" />
        </LinearLayout>
        <LinearLayout android:id="@+id/linearRowpriceday"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_marginEnd="@dimen/_12pxh" android:orientation="horizontal">
            <TextView android:id="@+id/txtPriceday"
                style="@style/txtIntersemibold20_4"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/lbl_price_day" tools:text="@string/lbl_price_day"/>
            <TextView android:id="@+id/txt200000"
                style="@style/txtInterregular20"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_marginStart="@dimen/_137pxh"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@string/lbl_200_000" tools:text="@string/lbl_200_000"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearRownote"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_6pxv"
            android:layout_marginEnd="@dimen/_12pxh" android:orientation="horizontal">
            <TextView android:id="@+id/txtNote"
                style="@style/txtIntersemibold20_4"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_6pxv"
                android:layout_weight="0.49"
                android:layout_width="0dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/lbl_note" tools:text="@string/lbl_note"/>
            <TextView android:id="@+id/txtOne"
                style="@style/txtInterregular20"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_187pxh"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_weight="0.51"
                android:layout_width="0dp"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@string/lbl2" tools:text="@string/lbl2"/>
        </LinearLayout>
        <View android:id="@+id/lineLineOne"
            android:layout_width="@dimen/_304pxh"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_2pxv"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginEnd="@dimen/_12pxh" android:background="@color/white_A700"/>
        <LinearLayout android:id="@+id/linearRowtotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12pxh"
            android:layout_marginBottom="@dimen/_12pxv"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:gravity="end" android:orientation="horizontal">
            <TextView android:id="@+id/txtTotal"
                style="@style/txtIntersemibold20_4"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_6pxv"
                android:layout_marginTop="@dimen/_7pxv"
                android:layout_weight="0.3"
                android:layout_width="0dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/lbl_total" tools:text="@string/lbl_total"/>
            <TextView android:id="@+id/txt400000"
                style="@style/txtInterregular32"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_60pxh"
                android:layout_weight="0.7"
                android:layout_width="0dp"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@string/lbl_400_0002" tools:text="@string/lbl_400_0002"/>
        </LinearLayout>
    </LinearLayout>
</layout>