<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout android:id="@+id/frameStackkind"
        style="@style/groupStylebluegray_102cornerRadius"
        android:layout_height="wrap_content"
        android:layout_width="@dimen/_328pxh"
        android:layout_gravity="top|start"
        android:layout_marginBottom="@dimen/_1pxv">
        <LinearLayout android:id="@+id/linearColumnkind"
            android:layout_gravity="top|start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12pxh"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_marginBottom="@dimen/_10pxv" android:orientation="vertical">
            <TextView android:id="@+id/txtKind"
                style="@style/txtIntermedium16_5"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:ellipsize="end"
                android:textSize="20sp"
                android:text="@string/lbl_kind" tools:text="@string/lbl_kind"/>
            <Spinner
                android:layout_width="match_parent"
                android:id="@+id/spinnerChooseroomkind"
                android:layout_height="48dp"
                android:layout_marginTop="@dimen/_3pxv"
                android:background="@drawable/layer_list_bg_gray_401_radius_13" tools:listitem="@layout/spinner_item"/>
            <TextView android:id="@+id/txtQuantity"
                style="@style/txtIntermedium16_5"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_width="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:textSize="20sp"
                android:text="@string/lbl_quantity" tools:text="@string/lbl_quantity"/>
            <LinearLayout android:id="@+id/linearRow2people"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_3pxh"
                android:layout_marginTop="@dimen/_2pxv"
                android:gravity="start" android:orientation="horizontal">
                <TextView android:id="@+id/txt2people"
                    style="@style/txtSolidRounded_2"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:layout_width="0dp"
                    android:ellipsize="end"
                    android:paddingEnd="@dimen/_11pxh"
                    android:paddingStart="@dimen/_11pxh"
                    android:paddingTop="@dimen/_5pxv"
                    android:singleLine="true"
                    android:paddingBottom="@dimen/_5pxv"
                    android:text="@string/lbl_2"
                    tools:text="@string/lbl_2"
                    android:textSize="15sp"/>
                <TextView android:id="@+id/txt4people"
                    style="@style/txtSolidRounded_3"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8pxh"
                    android:layout_weight="0.33"
                    android:layout_width="0dp"
                    android:ellipsize="end"
                    android:paddingEnd="@dimen/_11pxh"
                    android:paddingStart="@dimen/_11pxh"
                    android:paddingTop="@dimen/_5pxv"
                    android:singleLine="true"
                    android:paddingBottom="@dimen/_5pxv"
                    android:text="@string/lbl_4"
                    tools:text="@string/lbl_4"
                    android:textSize="15sp"/>
                <TextView android:id="@+id/txt6people"
                    style="@style/txtSolidRounded_3"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8pxh"
                    android:layout_weight="0.33"
                    android:layout_width="0dp"
                    android:ellipsize="end"
                    android:paddingEnd="@dimen/_11pxh"
                    android:paddingStart="@dimen/_11pxh"
                    android:paddingTop="@dimen/_5pxv"
                    android:singleLine="true"
                    android:paddingBottom="@dimen/_5pxv"
                    android:text="@string/lbl_8"
                    tools:text="@string/lbl_8"
                    android:textSize="15sp"/>
            </LinearLayout>
            <TextView android:id="@+id/txtStatus"
                style="@style/txtIntermedium16_5"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/_7pxv"
                android:singleLine="true"
                android:ellipsize="end"
                android:textSize="20sp"
                android:text="@string/lbl_status" tools:text="@string/lbl_status"/>
            <LinearLayout
                android:id="@+id/linearRowavailable"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/_3pxv" android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatButton
                    style="@style/btnSolidRounded"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnAvailable"
                    android:ellipsize="end"
                    android:layout_width="@dimen/_80pxh"
                    android:gravity="center"
                    android:paddingEnd="@dimen/_12pxh"
                    android:paddingStart="@dimen/_12pxh"
                    android:paddingTop="@dimen/_5pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_available"
                    android:paddingBottom="@dimen/_5pxv"
                    android:textSize="15sp"
                    android:textAllCaps="false" tools:text="@string/lbl_available"/>
                <androidx.appcompat.widget.AppCompatButton
                    style="@style/btnSolidRounded_1"
                    android:layout_width="@dimen/_120pxh"
                    android:id="@+id/btnNonAvailableOne"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8pxh"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:paddingEnd="@dimen/_12pxh"
                    android:paddingStart="@dimen/_12pxh"
                    android:paddingTop="@dimen/_5pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_non_available"
                    android:paddingBottom="@dimen/_5pxv"
                    android:textAllCaps="false"
                    android:textSize="15sp"
                    tools:text="@string/lbl_non_available"/>
            </LinearLayout>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDone" style="@style/btnSolidRounded_2"
            android:layout_width="@dimen/_89pxh"
            android:layout_gravity="bottom|end"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginBottom="@dimen/_8pxv"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingEnd="@dimen/_24pxh"
            android:paddingStart="@dimen/_25pxh"
            android:paddingTop="@dimen/_6pxv"
            android:singleLine="true"
            android:text="@string/lbl_done"
            android:textSize="15sp"
            android:paddingBottom="@dimen/_6pxv"
            android:textAllCaps="false" tools:text="@string/lbl_done"/>
    </FrameLayout>

</layout>